# bzst

./: .gitignore
rust/: Cargo.toml  README.md  rustfmt.toml
rust/.cargo/: config.toml
rust/bzst/: Cargo.toml
rust/bzst-cli/: Cargo.toml
rust/bzst-cli/src/: main.rs
rust/bzst-cli/tests/: cli.rs
rust/bzst/src/: codec.rs  concat.rs  frame.rs  index.rs  lib.rs  memory.rs  reader.rs  threads.rs  writer.rs
rust/bzst/tests/: concat.rs  interop.rs  robustness.rs  roundtrip.rs  seekable.rs
rust/bzst/tests/common/: mod.rs
spec/: bzst.typ
